# Burroughs-card-reader

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c
kicad/burroughs/: #auto_saved_files#  burroughs.kicad_prl  burroughs.kicad_pro  burroughs.kicad_sch
